--- a/.github/workflows/build-hug-image.yml
+++ b/.github/workflows/build-hug-image.yml
@@ -25,6 +25,10 @@ jobs:
         with:
           ref: hug 
 
+      - name: Set lowercase repository owner
+        id: lowercase
+        run: echo "owner=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -41,7 +45,7 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner | downcase }}/sstest:latest
+            ghcr.io/${{ steps.lowercase.outputs.owner }}/sstest:latest
           labels: |
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
             org.opencontainers.image.description=http server
